<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="#88000000"
    >
    <ImageView 
        android:id="@+id/setting_skin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/panel_2x1"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/clockBackgroundDescription"
        />
    <ImageButton 
        android:id="@+id/setting_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:background="#00000000"
        android:src="@drawable/setting_icon"
        android:contentDescription="@string/clockSetting"
        />

   	<LinearLayout
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_centerHorizontal="true"
   	    android:layout_centerVertical="true"
   	    android:orientation="vertical" >

   	    <LinearLayout
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_gravity="center_horizontal"
   	        android:orientation="horizontal"
   	        >
			<TextView
   	        	android:id="@+id/staminaClock"
   	        	style="@style/font_2x1_normal"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:text="@string/time_ex_3_3" />
			<TextView
   	        	android:id="@+id/staminaClockSub"
   	        	style="@style/font_2x1_small"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:layout_marginLeft="4dp"
   	        	android:text="@string/time_sub_ex" />
		</LinearLayout>
		
   	    <TextView
   	        android:id="@+id/charismaClock"
   	        style="@style/font_2x1_normal"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_gravity="center_horizontal"
   	        android:text="@string/time_ex_2_2" />

   	    	</LinearLayout>
    
 </RelativeLayout>

